# log-beacon

./: .gitignore  Cargo.toml  README.md  app-config.toml  config.toml  content-condition-regex.txt  history.txt  todo.txt
.config/: log-beacon-completion.sh
src/: channel_example.rs  log_model.rs  log_reader.rs  lru_cache.rs  main.rs
src/handlers/: command_handler.rs
src/models/: config_model.rs  log_model.rs  mod.rs  shell_model.rs
src/services/: condition_service.rs  configuration_service.rs  filter_service.rs  help_service.rs  listener.rs  log_parser.rs  mod.rs  process_service.rs  regexp_service.rs  server.rs  suspend_service.rs  tag_service.rs
src/utils/: completion.rs  mod.rs  toml_utils.rs
