[package]
name = "log-beacon"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
regex = "1.11.1"
chrono = "0.4.39"
clap = "4.5.18"
clap_derive = "4.5.18"
lru = "0.13.0"
shlex = "1.3.0"
comfy-table = "7.1.4"
# clear screen terminal alanı temizlenmesi için eklendi.
clearscreen = "4.0.1"
clap_complete = "4.5.44"
colored = "3.0.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
