[package]
name = "log-beacon"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[dependencies]
regex = "1.11.1"
chrono = "0.4.39"
clap = "4.5.18"
clap_derive = "4.5.18"
comfy-table = "7.1.4"
# clear screen terminal alanı temizlenmesi için eklendi.
clearscreen = "4.0.1"
clap_complete = "4.5.44"
colored = "3.0.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
rustyline = "15.0.0"
shellwords = "1.1.0"
ctrlc = "3.4.5"
crossterm = "0.28.1"
tokio-tungstenite = "0.26.2"
serde_json = "1.0.138"
futures-util = "0.3.31"
nix = "0.29.0"
sysinfo = "0.33.1"
tokio = { version = "1.43.0", features = ["full"] }
